# courseworks

./: .env_template  README.md  config.py  main.py  pyproject.toml
data/: report.json
data/reports/: default_func_operation_report.json  func_operation.json
src/: logging_config.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py
